--- a/bookstore-war/nbproject/project.properties
+++ b/bookstore-war/nbproject/project.properties
@@ -29,6 +29,8 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.bookstore-ejb.jar=..\\bookstore-ejb\\dist\\bookstore-ejb.jar
+file.reference.commons-lang3-3.4-javadoc.jar=lib\\commons-lang3-3.4-javadoc.jar
+file.reference.commons-lang3-3.4.jar=lib\\commons-lang3-3.4.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,7 +46,9 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${reference.bookstore-ejb.dist}:\
-    ${file.reference.bookstore-ejb.jar}
+    ${file.reference.bookstore-ejb.jar}:\
+    ${file.reference.commons-lang3-3.4-javadoc.jar}:\
+    ${file.reference.commons-lang3-3.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
